external-crates/move/crates/move-compiler/tests/move_2024/matching/enum_no_tyargs_match.move
module 0x42::m {

    public enum Threes has drop {
        One(u64),
        Two(u64, u64),
        Three(u64, u64, u64)
    }

    fun t0(): u64 {
        match (Threes::One(0)) {
            Threes::Three(x, _, _) => x,
            Threes::One(x) => x,
            Threes::Two(_, _) => 1,
        }
    }

}
